tests/ui/mir/static-by-value-str.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/static-by-value-str.rs:10:1
   |
LL | static C: (E, u16, str) = (E::V16(0xDEAD), 0x600D, 0xBAD);
   | ^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `(E, u16, str)`, the trait `Sized` is not implemented for `str`
   = note: required because it appears within the type `(E, u16, str)`
   = note: statics and constants must have a statically known size

error[E0308]: mismatched types
  --> $DIR/static-by-value-str.rs:10:52
   |
LL | static C: (E, u16, str) = (E::V16(0xDEAD), 0x600D, 0xBAD);
   |                                                    ^^^^^ expected `str`, found integer

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/static-by-value-str.rs:10:27
   |
LL | static C: (E, u16, str) = (E::V16(0xDEAD), 0x600D, 0xBAD);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `(E, u16, str)`, the trait `Sized` is not implemented for `str`
   = note: required because it appears within the type `(E, u16, str)`
   = note: tuples must have a statically known size to be initialized

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
